# TicketSystem-2020

./: .gitignore  CMakeLists.txt  app.py  backend.cpp  clean.sh  core.hpp  database.hpp  main.cpp  readme.md  ticket.py
BPlusTree/: database.hpp  database_cached.hpp  database_test.hpp  test.cpp  test_cache.cpp
Documents/: Contribution.md  Division_and_API.md  Project_Plan.md  Technical_Details.md
Documents/User_Doc/: 火车票管理系统 用户文档.md
include/: List.h  List.hpp
src/: core.hpp  database.hpp  exceptions.hpp  main.cpp  tools.hpp
static/: header.html
templates/: buy_ticket2.html  failure.html  form.html  form_alert.html  query_order.html  query_profile.html  query_ticket.html  query_train.html  query_transfer.html  root.html  root_login.html  success.html  table.html
